--- a/urunler.html
+++ b/urunler.html
@@ -40,7 +40,7 @@
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
 
-        </div><!-- navbar end -->
+        </div><!---- navbar end -->
            <div class="row"><!--bu ksım menunun altında kalan 12 lik 
                                 ızgara 4 ü aside bar için 8 lik resim section ı için  
                                 olmak üzere iki parçaya bölündü -->
@@ -159,11 +159,5 @@
             <h2>footer-----Kaliteli Seçiminiz ...<strong>DoStone Marble</strong></h2>
         </footer>
     </main>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
-
   </body>
 </html>
