topbar and logo chanmged  - js added by Sevda

--- a/iletisim.html
+++ b/iletisim.html
@@ -1,23 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   <p>
-<ul>
-    <li>Lorem, ipsum.</li>
-    <li>Vero, iure!</li>
-    <li>Recusandae, assumenda?</li>
-    <li>Suscipit, tempora.</li>
-    <li>In, mollitia.</li>
-</ul>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis necessitatibus repellat laudantium praesentium nostrum voluptatum tenetur earum commodi rem unde est aliquam impedit numquam, ipsum sint nobis, dolor nesciunt ducimus.</p>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/header.css">
 
-   </p> 
-</body>
+    <link rel="stylesheet" href="css/style.css">
+    <title>DoStone Marble</title>
+    <link rel="shortcut icon" href="/icon.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/448c51aa7a.js" crossorigin="anonymous"></script>
+
+  </head>
+  <body>
+
+    <div  style="position:relative;  height: 100px; background-color: black;">
+      <marquee  width = "100%" behavior="scroll" direction="right" Onmouseover="this.stop()" onmouseout="this.start()">
+        <p style="padding: top 3px;">   Kaliteli Mermer Bizim İşimiz DoStone   </p>
+       </marquee>
+       <img id="logo" src="images/logo2.jpg" alt="">
+   
+    </div>
+      <!-- </div> -->
+
+          <div class="row" style="background-color: black;">
+            <div id="menu" class="navbar">
+              <ul>
+                  <li><a class="active" href="index.html">Anasayfa</a></li>
+                  <li><a href="urunler.html">Ürünler</a></li>
+                  <li><a href="aboutus.html">Hakkımızda </a></li>
+                  <li><a href="iletisim.html">İletişim</a></li>
+              </ul>
+            </div>
+          </div>
+
+       <div style="align-self: center;" style="margin-top: 25px;">
+         <h1><marquee><b>DOSTONE.COM</b></marquee></h1>
+         <h5><b>FİRMA ADIMIZ:</b></h5>
+         <h5><i class="fa-solid fa-address-card"></i> DOSTONE TİC. LTD ŞTİ</h5>
+         <h5><b>YETKİLİ KİŞİ:</b></h5>
+         <h5><i class="fa-solid fa-person-dress"></i> ÜMİT TİLKİ</h5>
+         <h5><b>SEKTÖR:</b></h5>
+         <h5><i class="fa-solid fa-gem"></i> DOĞALTAŞ , MERMER</h5>
+         <h5><b>TELEFON:</b></h5>
+         <h5><i class="fa-solid fa-phone"></i> 0534 919 19 43</h5>
+         <h5><b>MAİL:</b></h5>
+         <h5><i class="fa-solid fa-envelope"></i> ümittilki@hotmail.com</h5>
+         <br>
+         <a href="https://www.instagram.com/dostone" target="_blank">
+         <img src="images/instagramico.png" width="25px" alt="instagramicon" ></a>
+         <br><br>
+         
+         
+         <h5><i class="fa-solid fa-location-dot"></i><b> ADRES:</b></h5>
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.3745579899405!2d34.50389701522094!3d36.737579579961476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d875cc9c0b2f8f%3A0xb83d771e1b33f9ac!2sToros%20%C3%9Cniversitesi%20Mezitli%20Kamp%C3%BCs%C3%BC!5e0!3m2!1str!2str!4v1654383535153!5m2!1str!2str" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       </div>
+
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="https://api.whatsapp.com/send?phone=5415040144&text=SELAM SEZGİN BUGÜN KAHVEN BENDEN" class="float" target="_blank">
+<i class="fa fa-whatsapp my-float"></i>
+</a>
+  </body>
 </html>
