--- a/urunler.html
+++ b/urunler.html
@@ -9,22 +9,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/urunler.js" charset="utf-8"></script>
+    <script src="js/index.js" charset="utf-8"></script>
     <title>DoStone Marble</title>
     <link rel="shortcut icon" href="/icon.ico" type="image/x-icon">
 
   </head>
   <body>
   
-    <div class="row" style="height: 50px; background-color: black;">
-      <marquee  width = "50%" behavior="scroll" direction="right" Onmouseover="this.stop()" onmouseout="this.start()">
+    <div class="topbar" style="position:relative;  height: 30px; background-color:black;"></div>
+    <div  class="topbar" style="position:relative;  height: 100px; background-color:white;">
+      <marquee  width = "100%" behavior="scroll" direction="right" Onmouseover="this.stop()" onmouseout="this.start()">
         <p style="padding: top 3px;">   Kaliteli Mermer Bizim İşimiz DoStone   </p>
        </marquee>
-      </div>
-      <div class="row" style="height: 60px; background-color: black;">
-       <img id="logo" src="images/logo2.jpg" alt="">
-      </div>
-  
+       <img id="logo" src="images/stonelogo_son.JPG" alt="">
+       <!-- <i class="fa-solid fa-bars"></i> -->
+       <img id="logo2" src="images/hamburclose.JPG" alt="">
+    </div>
+    
           <div class="row" style="background-color: black;">
             <div id="menu" class="navbar">
               <ul>
@@ -39,7 +42,7 @@
            <div class="row"><!--bu ksım menunun altında kalan 12 lik 
                                 ızgara 4 ü aside bar için 8 lik resim section ı için  
                                 olmak üzere iki parçaya bölündü -->
-            <aside class="col-sm-3"><!--ürün filtreleme kısmı-->
+            <aside class="col-sm-3" style="background-color:dimgrey;"><!--ürün filtreleme kısmı-->
                 <ul class="kategori"><!--Türe göre filtre--> 
                     <h3 class="fw-bold fs-2 mt-5">Ürün Kategorisi</h3>
                     <li><a id="granit" href="#" onclick="granit()">Granit</a></li>
@@ -184,5 +187,6 @@
 </div><!-- Main sonu-1.div -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </main>
+    
   </body>
 </html>
