--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
             <div class="footer-content">
                 
                 <div class="about">
-                    <h3 style="text-align: center;">About US</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <h3 style="text-align: center;">Firmamız</h3>
+                    <p style="font-size: 20px;;">Dostone Mermer olarak; doğal taşı, tüm güzelliğiyle mekanlarınıza taşımaktayız. Doğal taşa olan tutkumuzla,
+                      dünyanın farklı bölgelerinden ürün tedarik etmekteyiz.</p>
                 </div>
                 <div class="contact">
                     <ul class="socials">
