--- a/aboutus.html
+++ b/aboutus.html
@@ -30,9 +30,9 @@
        <!-- <i class="fa-solid fa-bars"></i> -->
        <img id="logo2" src="images/hamburclose.JPG" alt="">
     </div>
-    
+    <div class="topbar" style="position:relative;  height: 30px; background-color:black;"></div>
           <div class="row" style="background-color: black;">
-            <div id="menu" class="navbar">
+            <div id="menu" class="navbar" style="display: none; padding-left: 65%;">
               <ul>
                   <li><a class="active" href="index.html">Anasayfa</a></li>
                   <li><a href="urunler.html">Ürünler</a></li>
@@ -41,10 +41,8 @@
               </ul>
             </div>
           </div>
-          <div style="align-items: center; padding-left: 20%; padding-right: 20%; padding-top: 10%;" ><p><h1>Hakkımızda</h1></p> 
-            <h5>DOSTONE MERMER</h5>
-   
-            <p class="hakYazi">Dostone Mermer olarak; doğal taşı, tüm güzelliğiyle mekanlarınıza taşımaktayız. Doğal taşa olan tutkumuzla,
+          <div class="hakyazi"  ><p><h1>DOSTONE MERMER</h1></p> 
+            <p  style="font-size:30px; text-align: justify;">Dostone Mermer olarak; doğal taşı, tüm güzelliğiyle mekanlarınıza taşımaktayız. Doğal taşa olan tutkumuzla,
                  dünyanın farklı bölgelerinden ürün tedarik etmekteyiz. Beyaz Mermer koleksiyonu ile pazar lideri haline gelerek, 
                  projeleriniz için  memnuniyetinizi  en üst seviyede tutmaya çalışmaktayız.
                  200’den fazla seçenek ve yüksek metrajlı hazır stokla çalışarak, yurtiçi ve yurdışı taleplerine hızlı ve pratik çözümler sunmaktayız.
