--- a/iletisim.html
+++ b/iletisim.html
@@ -20,17 +20,18 @@
   </head>
   <body>
 
-    <div  style="position:relative;  height: 100px; background-color: black;">
+    <div class="topbar" style="position:relative;  height: 30px; background-color:black;"></div>
+    <div  class="topbar" style="position:relative;  height: 100px; background-color:white;">
       <marquee  width = "100%" behavior="scroll" direction="right" Onmouseover="this.stop()" onmouseout="this.start()">
         <p style="padding: top 3px;">   Kaliteli Mermer Bizim İşimiz DoStone   </p>
        </marquee>
-       <img id="logo" src="images/logo2.jpg" alt="">
-   
+       <img id="logo" src="images/stonelogo_son.JPG" alt="">
+       <!-- <i class="fa-solid fa-bars"></i> -->
+       <img id="logo2" src="images/hamburclose.JPG" alt="">
     </div>
-      <!-- </div> -->
-
+    <div class="topbar" style="position:relative;  height: 30px; background-color:black;"></div>
           <div class="row" style="background-color: black;">
-            <div id="menu" class="navbar">
+            <div id="menu" class="navbar" style="display: none; padding-left: 65%;">
               <ul>
                   <li><a class="active" href="index.html">Anasayfa</a></li>
                   <li><a href="urunler.html">Ürünler</a></li>
@@ -39,7 +40,6 @@
               </ul>
             </div>
           </div>
-
           <div id="iletisim">
             <!-- <h1><marquee><b>DOSTONE.COM</b></marquee></h1> -->
    
