--- a/urunler.html
+++ b/urunler.html
@@ -30,9 +30,9 @@
        <!-- <i class="fa-solid fa-bars"></i> -->
        <img id="logo2" src="images/hamburclose.JPG" alt="">
     </div>
-    
+    <div class="topbar" style="position:relative;  height: 30px; background-color:black;"></div> 
           <div class="row" style="background-color: black;">
-            <div id="menu" class="navbar">
+            <div id="menu" class="navbar" style="display: none; padding-left: 65%;">
               <ul>
                   <li><a class="active" href="index.html">Anasayfa</a></li>
                   <li><a href="urunler.html">Ürünler</a></li>
