--- a/iletisim.html
+++ b/iletisim.html
@@ -111,7 +111,7 @@
         
     </footer>
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<a href="https://api.whatsapp.com/send?phone=5415040144&text=SELAM SEZGİN BUGÜN KAHVEN BENDEN" class="float" target="_blank">
+<a href="https://api.whatsapp.com/send?phone=5349191943&text=" class="float" target="_blank">
 <i class="fa fa-whatsapp my-float"></i>
 </a>
   </body>
