--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 
                 <div class="about">
                     <h3 style="text-align: center;">Firmamız</h3>
-                    <p style="font-size: 20px;;">Dostone Mermer olarak; doğal taşı, tüm güzelliğiyle mekanlarınıza taşımaktayız. Doğal taşa olan tutkumuzla,
+                    <p style="font-size: 20px;">Dostone Mermer olarak; doğal taşı, tüm güzelliğiyle mekanlarınıza taşımaktayız. Doğal taşa olan tutkumuzla,
                       dünyanın farklı bölgelerinden ürün tedarik etmekteyiz.</p>
                 </div>
                 <div class="contact">
