--- a/urunler.html
+++ b/urunler.html
@@ -45,9 +45,10 @@
            <div class="row"><!--bu ksım menunun altında kalan 12 lik 
                                 ızgara 4 ü aside bar için 8 lik resim section ı için  
                                 olmak üzere iki parçaya bölündü -->
-            <aside class="col-sm-3" style="background-color:dimgrey;"><!--ürün filtreleme kısmı-->
+            <aside class="col-sm-3" style="background-color:rgb(197, 193, 193);"><!--ürün filtreleme kısmı-->
                 <ul class="kategori"><!--Türe göre filtre--> 
-                    <h3 class="fw-bold fs-2 mt-5">Ürün Kategorisi</h3>
+                    <h2 class="mt-5" style="text-align:center;"><b>Ürün Kategorisi</b></h2>
+                    
                     <li><a id="granit" href="#" onclick="granit()">Granit</a></li>
                     <li><a id="traverten" href="#" onclick="traverten()">Traverten</a></li>
                     <li><a id="onyx" href="#" onclick="onyx()">Onyx</a></li>   
@@ -59,117 +60,117 @@
                 </ul>              
             </aside>
             <section class="col-sm-9 bg-secondary"><!--ürün fotoğraflarının gösterildiği kısım -->
-                <div class="row"><!--ürün fotoğrafları birinci satırı -->
-                    <div id="urun1" class="card m-2" style="width:18rem; display:none">
-                        <div class="card-body">
+                <div class="row" style="padding-left: 10%;">
+                    <div id="urun1" class="card m-2" style=" width:20rem; display:none">
+                        <div class="card-body" style=" width:18rem; padding-left: 5%;">
                           <h5 id="card1title" class="card-title">Urun 1</h5>
-                          <img id="card1img" class="w-100" src="">
-                          <a id="te" href="#" class="card-link">Fiyat Teklifi Al</a>
+                          <img id="card1img" class="w-100 " style="height:15rem;"  src=""><br><br>
+                          <a  href="#" class="card-link">Fiyat Teklifi Al</a>
                         </div>
                       </div>
-                      <div id="urun2" class="card m-2 " style=" width:18rem; display:none">
-                        <div class="card-body ">
+                      <div id="urun2" class="card m-2 " style=" width:20rem; display:none">
+                        <div class="card-body " style=" width:18rem; padding-left: 5%;">
                           <h5 id="card2title" class="card-title">Urun 2</h5>
-                          <img id="card2img" class="w-100" src="">
+                          <img id="card2img" class="w-100 " style="height:15rem;"  src=""><br><br>
                           <a href="#" class="card-link">Fiyat Teklifi Al</a>
                         </div>
                       </div>
-                      <div id="urun3"class=" card m-2 " style="width:18rem; display:none">
-                        <div class="card-body ">
+                      <div id="urun3"class=" card m-2 " style="width:20rem; display:none">
+                        <div class="card-body " style=" width:18rem; padding-left: 5%;">
                           <h5 id="card3title" class="card-title">Urun 3</h5>
-                          <img  id="card3img" class="w-100" src="">
+                          <img  id="card3img" class="w-100 " style="height:15rem;"  src=""><br><br>
                           <a href="#" class="card-link">Fiyat Teklifi Al</a>
                         </div>
                       </div>
                 </div>
-                 <div  class="row"><!--ürün fotoğrafları ikinci satırı -->
-                  <div id="urun4" class="card m-2" style="width:18rem; display:none">
-                    <div class="card-body">
+                 <div  class="row" style="padding-left: 10%;"><!--ürün fotoğrafları ikinci satırı -->
+                  <div id="urun4" class="card m-2" style="width:20rem; display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card4title" class="card-title">Urun 4</h5>
-                      <img id="card4img" class="w-100" src="">
+                      <img id="card4img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
-                  <div id="urun5" class="card m-2" style="width:18rem; display:none">
-                    <div class="card-body">
+                  <div id="urun5" class="card m-2" style="width:20rem; display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card5title" class="card-title">Urun 5</h5>
-                      <img id="card5img" class="w-100" src="">
+                      <img id="card5img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
-                  <div id="urun6" class="card m-2" style="width:18rem; display:none">
-                    <div class="card-body">
+                  <div id="urun6" class="card m-2" style="width:20rem; display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card6title" class="card-title">Urun 6</h5>
-                      <img id="card6img" class="w-100" src="">
+                      <img id="card6img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
                 </div>
-                <div  class="row"><!--ürün fotoğrafları üçüncü satırı -->
-                  <div id="urun7" class="card m-2" style="width:18rem; display:none">
-                    <div class="card-body">
+                <div  class="row" style="padding-left: 10%;"><!--ürün fotoğrafları üçüncü satırı -->
+                  <div id="urun7" class="card m-2" style="width:20rem; display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card7title" class="card-title">Urun 7</h5>
-                      <img id="card7img" class="w-100" src="">
+                      <img id="card7img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
-                  <div id="urun8" class=" card m-2" style="width:18rem; display:none">
-                    <div class="card-body">
+                  <div id="urun8" class=" card m-2" style="width:20rem; display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card8title" class="card-title">Urun 8</h5>
-                      <img id="card8img" class="w-100" src="">
+                      <img id="card8img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
-                  <div id="urun9" class=" card m-2" style="width:18rem; display:none">
-                    <div class="card-body">
+                  <div id="urun9" class=" card m-2" style="width:20rem; display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card9title" class="card-title">Urun 9</h5>
-                      <img id="card9img" class="w-100" src="">
+                      <img id="card9img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
                 </div><!--üçüncü satır end-->
-                <div  class="row"><!--ürün fotoğrafları dördüncü satırı -->
-                  <div id="urun10" class="card m-2" style="width:18rem; display:none">
-                    <div class="card-body">
+                <div  class="row" style="padding-left: 10%;"><!--ürün fotoğrafları dördüncü satırı -->
+                  <div id="urun10" class="card m-2" style="width:20rem; display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card10title" class="card-title">Urun 10</h5>
-                      <img id="card10img" class="w-100" src="">
+                      <img id="card10img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
-                  <div id="urun11" class="card m-2" style="width:18rem; display:none">
-                    <div class="card-body">
+                  <div id="urun11" class="card m-2" style="width:20rem; display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card11title" class="card-title">Urun 11</h5>
-                      <img id="card11img" class="w-100" src="">
+                      <img id="card11img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
-                  <div id="urun12" class="card m-2" style="width:18rem;  display:none">
-                    <div class="card-body">
+                  <div id="urun12" class="card m-2" style="width:20rem;  display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card12title" class="card-title">Urun 12</h5>
-                      <img id="card12img" class="w-100" src="">
+                      <img id="card12img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
                 </div>
-                <div  class="row"><!--ürün fotoğrafları beşinci satırı -->
-                  <div id="urun13" class="card m-2" style="width:18rem; display:none">
-                    <div class="card-body">
+                <div  class="row" style="padding-left: 10%;"><!--ürün fotoğrafları beşinci satırı -->
+                  <div id="urun13" class="card m-2" style="width:20rem; display:none">
+                    <div class="card-body"style=" width:18rem; padding-left: 5%;">
                       <h5 id="card13title" class="card-title">Urun 13</h5>
-                      <img id="card13img" class="w-100" src="">
+                      <img id="card13img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
-                  <div id="urun14" class="card m-2" style="width:18rem; display:none">
-                    <div class="card-body">
+                  <div id="urun14" class="card m-2" style="width:20rem; display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card14title" class="card-title">Urun 14</h5>
-                      <img id="card14img" class="w-100" src="">
+                      <img id="card14img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
-                  <div id="urun15" class="card m-2" style="width:18rem;  display:none">
-                    <div class="card-body">
+                  <div id="urun15" class="card m-2" style="width:20rem;  display:none">
+                    <div class="card-body" style=" width:18rem; padding-left: 5%;">
                       <h5 id="card15title" class="card-title">Urun 12</h5>
-                      <img id="card15img" class="w-100" src="">
+                      <img id="card15img" class="w-100 " style="height:15rem;"  src=""><br><br>
                       <a href="#" class="card-link">Fiyat Teklifi Al</a>
                     </div>
                   </div>
@@ -184,8 +185,9 @@
           <div class="footer-content">
               
               <div class="about">
-                  <h3 style="text-align: center;">About US</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                  <h3 style="text-align: center;">Firmamız</h3>
+                  <p style="font-size: 20px;">Dostone Mermer olarak; doğal taşı, tüm güzelliğiyle mekanlarınıza taşımaktayız. Doğal taşa olan tutkumuzla,
+                    dünyanın farklı bölgelerinden ürün tedarik etmekteyiz.</p>
               </div>
               <div class="contact">
                   <ul class="socials">
